@@ -1,3 +1,8 @@
+2008-08-06  Timo Teras  <timo.teras@iki.fi>
+	From Krzysztof Piotr Oledzki <olel@ans.pl>:
+	* src/racoon/{privsep.c|session.c|session.h}: make privileged
+	  process exit if unprivileged process is terminated, spelling fixes
+
 2008-07-23  Matthew Grooms
 	* src/racoon/cfparse.y
 	  src/racoon/session.c : add missing ifdefs for non-radius builds
